# MaritimeViz

./: .gitignore  .travis.yml  AUTHORS.rst  LICENSE  Makefile  README.rst  main.py  pyproject.toml  requirements.txt  test_data.json  test_db.duckdb  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py
src/: ais_data .duckdb
src/maritimeviz/: __init__.py  ais_db.py  cli.py  constants.py  maritimeviz.py  viz.py
src/maritimeviz/utils/: __init__.py  ais_db_utils.py  constants.py  logging_utils.py  viz_utils.py
test_shapefile/: test_shapefile.dbf  test_shapefile.shp  test_shapefile.shx
tests/: __init__.py  test_ais_db.py  test_db.duckdb  test_gfw_api.py  test_maritimeviz.py  test_viz.py
