[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maritimeviz"
version = "0.1.0"
description = "A Python package designed to analyze and visualize Automatic Identification System (AIS) data, enabling easy exploration of maritime vessel movements through data extraction, cleaning, and analysis. Utilize powerful libraries like NumPy and Pandas for efficient data manipulation, and leverage the interactive mapping capabilities of Leafmap for insightful visualizations of vessel trajectories and other key maritime information."
readme = "README.rst"
authors = [
  {name = "Thalia Valle, Marcelo Amorin, Enrique Baggio, Paulo Drefhal", email = "thaliasaxo@gmail.com"}
]
maintainers = [
  {name = "Thalia Valle, Marcelo Amorin, Enrique Baggio, Paulo Drefhal", email = "thaliasaxo@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "ais",
  "duckdb>=0.7.1",
  "pandas",
  "geopandas"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Thaliavch/maritimeviz/issues"
changelog = "https://github.com/Thaliavch/maritimeviz/blob/master/changelog.md"
homepage = "https://github.com/Thaliavch/maritimeviz"

[project.scripts]
maritimeviz = "main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

